Change dvc configuratin

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,2 +1,5 @@
+[core]
+    remote = origin
 ['remote "origin"']
-    url = https://dagshub.com/sofiapedros/tumor_classification.dvc
+    url = s3://dvc
+    endpointurl = https://dagshub.com/sofiapedros/tumor_classification.s3
