--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ Flask
 streamlit
 pyarrow==14.0.1
 mlflow==2.13.0
+torch==2.3.0+cpu --index-url https://download.pytorch.org/whl/cpu
+tensorboard
 openpyxl
 streamlit
