--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -4,7 +4,10 @@ FROM python:3.11-slim
 WORKDIR /app
 # Copiar el archivo de requisitos e instalar las dependencias
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu \
+    && pip install --no-cache-dir -r requirements.txt
+
 # Copiar el script de la aplicación web
 COPY app_web.py .
 # Exponer el puerto en el que se ejecutará la API
