--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -93,7 +93,11 @@ jobs:
           IMAGE_NAME="gcr.io/${{ vars.GCP_PROJECT_ID}}/tumor-api:latest"
           docker build -t $IMAGE_NAME .
           echo "IMAGE_API=$IMAGE_NAME" >> $GITHUB_ENV
-        
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/local/lib/android
+          docker system prune -af || true
+          docker builder prune -af || true
       - name: Trivy scan for API Image
         uses: aquasecurity/trivy-action@master
         with:
@@ -111,7 +115,11 @@ jobs:
           IMAGE_NAME="gcr.io/${{ vars.GCP_PROJECT_ID  }}/mlops-tumor-web:latest"
           docker build -t $IMAGE_NAME -f Dockerfile.web .
           echo "IMAGE_WEB=$IMAGE_NAME" >> $GITHUB_ENV
-
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/local/lib/android
+          docker system prune -af || true
+          docker builder prune -af || true
       - name: Trivy scan for API Image
         uses: aquasecurity/trivy-action@master
         with:
