--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -141,5 +141,6 @@ jobs:
           kubectl apply -f api-service.yaml
           kubectl apply -f web-deployment.yaml
           kubectl apply -f web-service.yaml
+          kubectl apply -f pod-monitoring.yaml
       
       
