--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,29 @@ services:
     depends_on:
     - tumor-api
     restart: always
+  
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus-tumor
+    volumes:
+    - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    ports:
+    - "9090:9090"
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana-tumor
+    ports:
+    - "3000:3000"
+    environment:
+    - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+    - prometheus
+    volumes:
+    - grafana-storage:/var/lib/grafana
+    - ./grafana-provisioning:/etc/grafana/provisioning
+    restart: unless-stopped
+
+volumes:
+  grafana-storage:
